添加验证码和本地网络代理

--- a/src/.env.production
+++ b/src/.env.production
@@ -4,8 +4,10 @@ ENV = 'production'
 # 接口地址，注意协议，如果你没有配置 ssl，需要将 https 改为 http
 #VUE_APP_BASE_API  = 'https://el-admin.xin'
 #VUE_APP_BASE_API  = 'http://localhost/oamapi/'
-VUE_APP_BASE_API  = 'https://loc3.qvcloud.net/oamapi/'
+# VUE_APP_BASE_API  = 'https://loc3.qvcloud.net/oamapi/'
+VUE_APP_BASE_API  = 'https://116.228.9.66/'
 # 如果接口是 http 形式， wss 需要改为 ws
 #VUE_APP_WS_API = 'wss://el-admin.xin'
 #VUE_APP_WS_API = 'ws://localhost/oamapi/'
-VUE_APP_WS_API = 'wss://loc3.qvcloud.net/oamapi/'
+# VUE_APP_WS_API = 'wss://loc3.qvcloud.net/oamapi/'
+VUE_APP_WS_API = 'wss://116.228.9.66/'
