--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "core-js": "^3.6.5",
         "element-ui": "^2.15.10",
         "vue": "^2.6.11",
+        "vue-image-crop-upload": "^3.0.3",
         "vue-router": "^3.6.5",
         "vuex": "^3.6.2"
     },
