--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "axios": "^1.1.3",
         "core-js": "^3.6.5",
         "element-ui": "^2.15.10",
+        "nanoid": "^4.0.2",
         "vue": "^2.6.11",
         "vue-image-crop-upload": "^3.0.3",
         "vue-router": "^3.6.5",
